[package]
name = "polkafoundry-staking"
version = "0.0.1"
authors = ["Tung <tung.nguyen@icetea.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.119", optional = true }
log = { version = "0.4.14", default-features = false }

author-inherent = { path = '../author-inherent', default-features = false }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-arithmetic = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-election-provider-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", features = ["historical"], branch = "master", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ['std']
std = [
    'author-inherent/std',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-election-provider-support/std',
    'pallet-balances/std',
    'pallet-utility/std',
    'pallet-authorship/std',
    'pallet-session/std',
    'pallet-timestamp/std',
    'log/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-arithmetic/std',
    'serde'
]
