[package]
name = "polkafoundry-staking"
version = "0.0.1"
authors = ["Tung <tung.nguyen@icetea.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.119", optional = true }
log = { version = "0.4.14", default-features = false }

frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
sp-arithmetic = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
sp-staking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
frame-election-provider-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", features = ["historical"], branch = "polkadot-v0.9.6", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'polkadot-v0.9.6', optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6" }
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6" }
frame-election-provider-support = { features = ["runtime-benchmarks"], git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6'  }
rand_chacha = { version = "0.2" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-election-provider-support/std',
    'pallet-authorship/std',
    'pallet-session/std',
    'log/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-arithmetic/std',
    'sp-staking/std',
    'serde'
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-election-provider-support/runtime-benchmarks",
    "rand_chacha",
]
