[package]
name = "pallet-staking"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-io ={ version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-staking = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6'}
frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"], git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
pallet-authorship = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-application-crypto = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
frame-election-provider-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
log = { version = "0.4.14", default-features = false }
paste = "1.0"

# Optional imports for benchmarking
frame-benchmarking = { version = "3.1.0", default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6', optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
sp-storage = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-tracing = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
pallet-timestamp = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
pallet-staking-reward-curve = { version = "3.0.0",  path = "../staking/reward-curve" }
substrate-test-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
frame-election-provider-support = { version = "3.0.0", features = ["runtime-benchmarks"], git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
rand_chacha = { version = "0.2" }
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]
