[package]
name = "runtime-common"
version = "0.0.1"
authors = ["Tung <tung.nguyen@icetea.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
polkadot-primitives = { default-features = false, git = 'https://github.com/paritytech/polkadot.git', branch = 'release-v0.9.8' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-authorship = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-treasury = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
pallet-election-provider-multi-phase = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
runtime-primitives = { default-features = false, path = '../../primitives' }
pkfp-oracle = { default-features = false, path = '../../pkfp/oracle' }
pkfp-primitives = { default-features = false, path = '../../pkfp/primitives' }

[features]
default = ["std"]
std = [
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'polkadot-primitives/std',
    'pallet-balances/std',
    'pallet-authorship/std',
    'pallet-treasury/std',
    'pallet-transaction-payment/std',
    'pallet-election-provider-multi-phase/std',
    'runtime-primitives/std',
    'pkfp-oracle/std',
    'pkfp-primitives/std',
]
