[package]
name = 'ethereum'
authors = ['Polkafoundry']
edition = '2018'
homepage = 'https://polkafoundry.com'
license = 'Unlicense'
repository = 'https://github.com/polkafoundry/newpolka/'
version = '0.1.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.119' }
log = '0.4.8'


sp-core = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-io = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-std = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
sha3 = { version = '0.9.1', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'sha3/std',

    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'sp-runtime/std',
]

